Sprint 2.0 Progress - Complete mail sending

--- a/public/css/app/custom-stylesheet.css
+++ b/public/css/app/custom-stylesheet.css
@@ -68,3 +68,6 @@
 .fi-input-wrp-suffix .fi-icon-btn-icon {
     color: #fff!important;
 }
+.fi-input-wrp-suffix .fi-input-wrp-label {
+    color: #fff!important;
+}
