Fix menu btn and 2 reports excel

--- a/public/css/app/custom-stylesheet.css
+++ b/public/css/app/custom-stylesheet.css
@@ -54,3 +54,13 @@
     transition: 0.2s ease-in-out;
 }
 
+
+.fi-topbar-open-sidebar-btn {
+    background: #1e4e6e;
+    color: #fff;
+}
+.fi-sidebar-header .fi-icon-btn {
+    background: #1e4e6e;
+    color: #fff;
+}
+
