--- a/public/css/app/custom-stylesheet.css
+++ b/public/css/app/custom-stylesheet.css
@@ -2,7 +2,10 @@
     background: #1e4e6e;
 }
 
-.fi-sidebar-item-label, .fi-sidebar-group-label, .fi-sidebar-item-icon, .fi-icon-btn-icon {
+.fi-sidebar-nav .fi-sidebar-item-label,
+.fi-sidebar-group-label, .fi-sidebar-item-icon,
+.fi-sidebar-nav .fi-icon-btn-icon,
+.fi-fo-repeater-item .fi-icon-btn-icon {
     color: #fff !important;
 }
 
@@ -63,3 +66,73 @@
     transition: 0.2s ease-in-out;
 }
 
+.custom-table-wrapper {
+    width: 100%;
+    border: 1px solid rgba(var(--gray-200), 1);
+    border-radius: 10px;
+}
+.dark .custom-table-wrapper {
+    width: 100%;
+    border: 1px solid hsla(0,0%,100%,.05);
+    border-radius: 10px;
+}
+
+.custom-table {
+    width: 100%;
+    border-collapse: collapse;
+    border-width: 0;
+}
+
+.custom-table th {
+    border-bottom: 1px solid rgba(var(--gray-200), 1);
+}
+.dark .custom-table th {
+    border-bottom: 1px solid hsla(0,0%,100%,.05);
+}
+.custom-table td {
+    border-top: 1px solid rgba(var(--gray-200), 1);
+}
+.dark .custom-table td {
+    border-top: 1px solid hsla(0,0%,100%,.05);
+}
+
+
+.custom-table td,
+.custom-table th {
+    border-collapse: collapse;
+    font-size: .875rem;
+    text-align: center;
+    padding: 10px;
+}
+
+.custom-table th {
+    background-color: rgba(var(--gray-200), 0.3);
+}
+.custom-table tr:nth-child(even) {
+    background-color: rgba(var(--gray-200), 0.3);
+}
+.custom-table tr:hover {
+    transition: 0.2s ease;
+    background-color: rgba(var(--gray-200), 0.3);
+}
+
+.dark .custom-table th {
+    background-color: hsl(240deg 4% 14.71%);
+}
+.dark .custom-table tr:nth-child(even) {
+    background-color: hsl(240deg 4% 14.71%);
+}
+.dark .custom-table tr:hover {
+    transition: 0.2s ease;
+    background-color: hsl(240deg 4% 14.71%);
+}
+
+.custom-table .flex-td {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.custom-table .flex-td p {
+    margin-bottom: 5px;
+}
