--- a/resources/custom-css/admin.css
+++ b/resources/custom-css/admin.css
@@ -149,7 +149,7 @@
     background: #ff7b7b!important;
 }
 .color-light-orange {
-    background: #ffcc80!important;
+    background: #c0c0c0!important;
 }
 
 
