--- a/public/css/app/custom-stylesheet.css
+++ b/public/css/app/custom-stylesheet.css
@@ -186,3 +186,26 @@
 .fi-main {
     max-width: 100%!important;
 }
+
+.repeater-guides .fi-fo-repeater-item-header h4 {
+    color: #fff !important;
+}
+
+.repeater-guides .fi-fo-repeater-item-header {
+    background: #447ca1 !important;
+}
+
+.repeater-guides .fi-fo-repeater-item {
+    border: 2px solid #447ca1 !important;
+}
+
+.repeater-guides .fi-btn {
+    background: #447ca1 !important;
+    color: #fff !important;
+    transition: 0.2s ease-in-out;
+}
+
+.repeater-guides .fi-btn:hover {
+    background: #1e4e6e !important;
+    transition: 0.2s ease-in-out;
+}
