--- a/public/css/app/custom-stylesheet.css
+++ b/public/css/app/custom-stylesheet.css
@@ -133,13 +133,14 @@
 
 .custom-table .flex-td {
     display: flex;
-    flex-direction: column;
+    /*flex-direction: column;*/
     align-items: center;
+    justify-content: center;
 }
 
 .custom-table .flex-td p {
     font-size: 14px;
-    margin-bottom: 5px;
+    margin-right: 5px;
 }
 
 
