--- a/public/css/app/custom-stylesheet.css
+++ b/public/css/app/custom-stylesheet.css
@@ -131,14 +131,14 @@
     background-color: hsl(240deg 4% 14.71%);
 }
 
-.custom-table .flex-td {
+.flex-td {
     display: flex;
     /*flex-direction: column;*/
     align-items: center;
     justify-content: center;
 }
 
-.custom-table .flex-td p {
+.flex-td p {
     font-size: 14px;
     margin-right: 5px;
 }
