--- a/public/css/app/custom-stylesheet.css
+++ b/public/css/app/custom-stylesheet.css
@@ -131,10 +131,18 @@
     background-color: hsl(240deg 4% 14.71%);
 }
 
+.flex-td {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .custom-table .flex-td {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .custom-table .flex-td p {
