--- a/resources/custom-css/admin.css
+++ b/resources/custom-css/admin.css
@@ -135,6 +135,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .custom-table .flex-td p {
